--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ body {
   font-style: normal;
 }
 
+section {
+  padding: 2em;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -58,30 +62,13 @@ img {
 
 strong {font-weight: var(--fw-bold)};
 
-.btn {
-  display:inline-block;
-  padding: .5em 1.5em;
-  background: var(--clr-accent);
-  color: var(--clr-dark);
-  text-decoration: none;
-  cursor:pointer;
-  text-transform:uppercase;
-  letter-spacing: 2px;
-  font-weight: var(--fw-bold);
-  font-size: .8rem;
-  transition: transform 200ms ease-in-out;
-}
-
-.btn:hover {
-  transform:scale(1.1)
-}
 
 /* typography */
 
 h1,
 h2,
 h3 {
-  line-height: 1.1;
+  line-height: 1;
   margin: 0;
 }
 
@@ -201,6 +188,11 @@ nav {
   opacity: 0.25;
 }
 
+.services {
+  /* display: block; */
+  margin-bottom: 4em;
+}
+
 .service {
   max-width: 500px;
   margin: 0 auto;
@@ -210,10 +202,37 @@ nav {
   .services {
     display: flex;
     max-width:100%;
-    margin: 0 auto;
+    margin-left:auto;
+    margin-right:auto;
   }
 
-  .service + .service {
-    margin-left: 2em;
+  .service{
+    margin-left: auto;
+    margin-right: auto;
   }
+}
+
+.button {
+  display:inline-block;
+  padding: .5em 2.5em;
+  background: var(--clr-accent);
+  color: var(--clr-dark);
+  text-decoration: none;
+  cursor:pointer;
+  text-transform:uppercase;
+  letter-spacing: 2px;
+  font-weight: var(--fw-bold);
+  font-size: .8rem;
+  transition: transform 200ms ease-in-out;
+  margin-bottom: 4em;
+
+}
+
+.button:hover {
+  transform:scale(1.1)
+}
+
+:focus {
+  outline: 3px solid var(--clr-accent);
+  outline-offset: 3px;
 }
