--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@
 /* custom properties */
 
 :root {
-  --ff-primary: "Kode Mono", monospace;;
-  --ff-secondary: "Kode Mono", monospace;;
+  --ff-primary: 'Kode Mono', monospace;
+  --ff-secondary: 'Kode Mono', monospace;
 
   --fw-reg: 400;
   --fw-bold: 700;
@@ -24,8 +24,8 @@
   --fs-h3: 1.25rem;
   --fs-body: 1rem;
 
-  --bs: 0.25em 0.25em 0.75em rgb(0,0,0,.25),
-        0.125em 0.125em .25em rgb(0,0,0,.15)
+  --bs: 0.25em 0.25em 0.75em rgb(0, 0, 0, 0.25),
+    0.125em 0.125em 0.25em rgb(0, 0, 0, 0.15);
 }
 
 @media (min-width: 800px) {
@@ -45,10 +45,13 @@ body {
   margin: 0;
   font-family: var(--ff-primary);
   font-size: var(--fs-body);
-  font-weight:300;
+  font-weight: 300;
   line-height: 1.6;
   font-optical-sizing: auto;
   font-style: normal;
+  text-transform: lowercase;
+  transition: background 5000ms ease-in-out;
+  transition-behavior: smooth;
 }
 
 section {
@@ -60,8 +63,9 @@ img {
   max-width: 100%;
 }
 
-strong {font-weight: var(--fw-bold)};
-
+strong {
+  font-weight: var(--fw-bold);
+}
 
 /* typography */
 
@@ -82,9 +86,14 @@ h3 {
   font-size: var(--fs-h3);
 }
 
+.logo {
+  color: var(--clr-accent);
+  margin: 1em;
+  padding: 0.5em;
+}
+
 .section__title {
   margin-bottom: 0.25em;
-  
 }
 
 .section__title-intro {
@@ -101,20 +110,19 @@ h3 {
 .section__subtitle--intro,
 .section__subtitle--about {
   background: var(--clr-accent);
-  padding: .25em 1em;
+  padding: 0.25em 1em;
   font-family: var(--ff-secondary);
-  margin-bottom: 1em
+  margin-bottom: 1em;
 }
 
 .section__subtitle--intro {
-  display:inline-block;
- 
+  display: inline-block;
 }
 
 /* header */
 
 nav {
-  display:none;
+  display: none;
 }
 
 /* intro section */
@@ -124,13 +132,12 @@ nav {
 }
 
 .intro__img {
-  box-shadow: var(--bs)
+  box-shadow: var(--bs);
 }
 
 .section__subtitle--intro {
-  display:inline-block;
+  display: inline-block;
 }
-
 
 @media (min-width: 600px) {
   .intro {
@@ -138,27 +145,27 @@ nav {
     width: min-content;
     margin: 0 auto;
     grid-column-gap: 1em;
-    grid-template-areas: 
-    "img title"
-    "img subtitle";
-    grid-template-columns:min-content max-content;
+    grid-template-areas:
+      'img title'
+      'img subtitle';
+    grid-template-columns: min-content max-content;
   }
 
   .intro__img {
     grid-area: img;
     min-width: 250px;
-    position:relative;
-    box-shadow: var(--bs)
-  } 
+    position: relative;
+    box-shadow: var(--bs);
+  }
 
   .section__subtitle--intro {
     align-self: start;
     grid-column: -1 / 1;
     grid-row: 2;
     text-align: right;
-    position:relative;
+    position: relative;
     left: -1.5em;
-    width: calc(100% + 1.5em)
+    width: calc(100% + 1.5em);
   }
 }
 
@@ -167,20 +174,20 @@ nav {
 .my-services {
   background: var(--clr-dark);
   background-image: url('/img/brainbeat-grid-bw.jpeg');
-  background-size:cover;
-  background-blend-mode:multiply;
+  background-size: cover;
+  background-blend-mode: multiply;
   color: var(--clr-light);
   text-align: center;
 }
 
 .section__title--services {
   color: var(--clr-accent);
-  position: relative
+  position: relative;
 }
 
 .section__title--services::after {
   content: '';
-  display:block;
+  display: block;
   width: 2em;
   height: 1px;
   margin: 0.5em auto 1em;
@@ -201,35 +208,34 @@ nav {
 @media (min-width: 800px) {
   .services {
     display: flex;
-    max-width:100%;
-    margin-left:auto;
-    margin-right:auto;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .service{
+  .service {
     margin-left: auto;
     margin-right: auto;
   }
 }
 
 .button {
-  display:inline-block;
-  padding: .5em 2.5em;
+  display: inline-block;
+  padding: 0.5em 2.5em;
   background: var(--clr-accent);
   color: var(--clr-dark);
   text-decoration: none;
-  cursor:pointer;
-  text-transform:uppercase;
+  cursor: pointer;
+  text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: var(--fw-bold);
-  font-size: .8rem;
+  font-size: 0.8rem;
   transition: transform 200ms ease-in-out;
   margin-bottom: 4em;
-
 }
 
 .button:hover {
-  transform:scale(1.1)
+  transform: scale(1.1);
 }
 
 :focus {
