--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,10 @@ strong {
 }
 
 /* typography */
+a {
+  text-decoration: none;
 
+}
 h1,
 h2,
 h3 {
@@ -122,9 +125,9 @@ h3 {
 
 /* header */
 
-nav {
+/* nav {
   display: none;
-}
+} */
 
 /* intro section */
 
@@ -204,6 +207,8 @@ nav {
 .service {
   max-width: 500px;
   margin: 0 auto;
+  width: 30%;
+
 }
 
 @media (min-width: 800px) {
@@ -233,6 +238,11 @@ nav {
   font-size: 0.8rem;
   transition: transform 200ms ease-in-out;
   margin-bottom: 4em;
+}
+
+.button a {
+  color: var(--clr-dark);
+
 }
 
 .button:hover {
