--- a/css/work.css
+++ b/css/work.css
@@ -24,7 +24,7 @@
   cursor: pointer;
 }
 
-.portfolio__item--link svg {
+.github {
   color: #f9f9f9;
   height: 2rem;
   width: 2rem;
@@ -32,6 +32,7 @@
   top: 6px;
   border-radius: 50%;
 }
+
 .github:hover{
   color: #f9f9f9;
   transform: scale(1.1);
