--- a/css/work.css
+++ b/css/work.css
@@ -1,6 +1,7 @@
 @import './style.css';
 
 
+
 .logo__link {
   text-decoration: none;
   color: inherit;
@@ -10,6 +11,7 @@
 .portfolio {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(600px, 1fr));
+  max-width: 1200px;
   grid-gap: 1rem;
 }
 
@@ -77,3 +79,13 @@
   height: auto;
   box-shadow: 0 0 10px rgba(249, 249, 249, 0.1);
 }
+
+/* @media(min-width: 1280px) {
+  .portfolio {
+    grid-template-columns: repeat(auto-fill, minmax(1000px, 1fr));
+  }
+
+  .portfolio__item {
+    width: 100%;
+  }
+} */
