--- a/css/work.css
+++ b/css/work.css
@@ -82,6 +82,7 @@
 
 @media(max-width: 1280px) {
   .portfolio {
+    margin: 0 auto;
     grid-template-columns: repeat(auto-fill, minmax(1000px, 1fr));
   }
 
